# safiri

./: DATA_CARD.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  STREAMLIT_DEPLOY.md  docker-compose.yml  pyproject.toml  requirements.txt  run_all.sh
api/: main.py
artifacts/: model_bundle.joblib  model_bundle.meta.json
configs/: default.yaml
dashboard/: app.py
data/processed/: events_canonical.csv  events_rejected.csv  shipments_split.csv  snapshot_report.json  snapshots.csv  stage_training_rows.csv  validation_report.json
data/raw/: events_ground_truth.csv  events_raw.csv  manifest.json  shipments.csv
scripts/: clean_generated.py
src/safiri_eta/: __init__.py  cli.py  config.py  constants.py  evaluation.py  exceptions.py  models.py  reporting.py  service.py  simulation.py  snapshots.py  utils.py  validation.py
src/safiri_eta_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_models_and_explanations.py  test_pipeline.py  test_simulation.py
