[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safiri-eta-lab"
version = "1.0.0"
description = "Milestone-aware shipment ETA, delay risk and exception detection research prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "streamlit>=1.30",
  "plotly>=5.18",
  "reportlab>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
safiri-eta = "safiri_eta.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

